--- a/elites-messenger-repo/app/views/timelines/index.html.erb
+++ b/elites-messenger-repo/app/views/timelines/index.html.erb
@@ -1,2 +1,18 @@
-<h1>Timelines#index</h1>
-<p>Find me in app/views/timelines/index.html.erb</p>
+<div class="wrapper timeline_wrapper">
+
+  <!-- メッセージ入力 -->
+  <div class="input">
+    <%= form_for @input_message do |f| %>
+        <div class="form-group">
+          <%= f.label :message %><br/>
+          <%= f.text_area :message, class: 'form-control', row: 3 %>
+        </div>
+        <div class="actions clearfix">
+          <div class="post">
+            <%= f.submit 'Post', class: 'btn btn-primary' %>
+          </div>
+        </div>
+    <% end %>
+  </div>
+
+</div>
