--- a/elites-messenger-repo/app/assets/stylesheets/timelines.scss
+++ b/elites-messenger-repo/app/assets/stylesheets/timelines.scss
@@ -7,6 +7,7 @@ div.timeline_wrapper {
     width: 700px;
   }
   div.actions {
+    div.alert { float: left; }
     div.post { float: right; }
   }
 }
