--- a/elites-messenger-repo/app/assets/stylesheets/timelines.scss
+++ b/elites-messenger-repo/app/assets/stylesheets/timelines.scss
@@ -7,7 +7,42 @@ div.timeline_wrapper {
     width: 700px;
   }
   div.actions {
-    div.alert { float: left; }
-    div.post { float: right; }
+    div.alert {
+      float: left;
+    }
+    div.post {
+      float: right;
+    }
+  }
+
+  div.timeline {
+    div.per {
+      border-radius: 5px;
+      padding: 10px;
+      margin-bottom: 20px;
+
+      background-color: #DADADA;
+      &.mine {
+        background-color: #C1EFFF;
+      }
+
+      p {
+        margin: 0;
+      }
+      p.icon {
+        display: inline-block;
+        width: 70px;
+        img {
+          max-width: 100%;
+          height: auto;
+        }
+      }
+      p.message {
+        display: inline-block;
+        margin-left: 10px;
+        width: 500px;
+        vertical-align: top;
+      }
+    }
   }
 }
