メッセージの改行

--- a/elites-messenger-repo/app/views/timelines/index.html.erb
+++ b/elites-messenger-repo/app/views/timelines/index.html.erb
@@ -29,9 +29,7 @@
                 NO IMAGE
             <% end %>
           </p>
-          <p class="message">
-            <%= t.message %>
-          </p>
+          <%= simple_format t.message, class: 'message' %>
         </div>
     <% end %>
   </div>
