--- a/elites-messenger-repo/app/views/timelines/index.html.erb
+++ b/elites-messenger-repo/app/views/timelines/index.html.erb
@@ -4,7 +4,11 @@
   <div class="input">
     <%= form_for @input_message do |f| %>
         <div class="form-group">
-          <%= f.label :message %><br/>
+          <%= f.label :message %>
+          <% if @input_message.persisted? %>
+            編集中
+          <% end %>
+          <br/>
           <%= f.text_area :message, class: 'form-control', row: 3 %>
         </div>
         <div class="actions clearfix">
@@ -12,6 +16,11 @@
             <p class="alert"><%= alert %></p>
           </div>
           <div class="post">
+            <% if @input_message.persisted? %>
+                <%= link_to root_path do %>
+                    <%= button_tag 'Cancel', class: 'btn btn-default' %>
+                <% end %>
+            <% end %>
             <%= f.submit 'Post', class: 'btn btn-primary' %>
           </div>
         </div>
@@ -21,7 +30,7 @@
   <!-- タイムライン -->
   <div class="timeline">
     <% @timeline.each do |t| %>
-        <div class="per <%= 'mine' if t.user.id == current_user.id %>">
+        <div class="per <%= 'mine' if mypost?(t) %>">
           <p class="icon">
             <% if t.user.thumbnail? %>
                 <%= image_tag t.user.thumbnail.url %>
@@ -30,6 +39,11 @@
             <% end %>
           </p>
           <%= simple_format t.message, class: 'message' %>
+          <% if mypost?(t) %>
+              <%= link_to root_path(id: t.id, message: t.message) do %>
+                  <%= button_tag 'Edit', class: 'btn btn-info' %>
+              <% end %>
+          <% end %>
         </div>
     <% end %>
   </div>
