--- a/elites-messenger-repo/app/views/timelines/index.html.erb
+++ b/elites-messenger-repo/app/views/timelines/index.html.erb
@@ -21,7 +21,7 @@
   <!-- タイムライン -->
   <div class="timeline">
     <% @timeline.each do |t| %>
-        <div class="per <%= 'mine' if t.user.id == current_user.id %>">
+        <div class="per <%= 'mine' if mypost?(t) %>">
           <p class="icon">
             <% if t.user.thumbnail? %>
                 <%= image_tag t.user.thumbnail.url %>
@@ -30,6 +30,11 @@
             <% end %>
           </p>
           <%= simple_format t.message, class: 'message' %>
+          <% if mypost?(t) %>
+              <%= link_to root_path(t, {id: t.id, message: t.message}) do %>
+                  <%= button_tag 'Edit', class: 'btn btn-info' %>
+              <% end %>
+          <% end %>
         </div>
     <% end %>
   </div>
