ユーザフィルター

--- a/elites-messenger-repo/app/assets/stylesheets/timelines.scss
+++ b/elites-messenger-repo/app/assets/stylesheets/timelines.scss
@@ -45,4 +45,11 @@ div.timeline_wrapper {
       }
     }
   }
+
+  div.user_filter {
+    margin-bottom: 20px;
+    div.actions {
+      text-align: right;
+    }
+  }
 }
