--- a/elites-messenger-repo/app/assets/stylesheets/timelines.scss
+++ b/elites-messenger-repo/app/assets/stylesheets/timelines.scss
@@ -26,6 +26,10 @@ div.timeline_wrapper {
         background-color: #C1EFFF;
       }
 
+      &.reply {
+        margin-top: -20px;
+      }
+
       p {
         margin: 0;
       }
