--- a/elites-messenger-repo/app/views/timelines/index.html.erb
+++ b/elites-messenger-repo/app/views/timelines/index.html.erb
@@ -7,6 +7,8 @@
           <%= f.label :message %>
           <% if @input_message.persisted? %>
               編集中
+          <% elsif @reply_timeline %>
+              <%= @reply_timeline.user.name %>の「<%= truncate(@reply_timeline.message, length: 7) %>」に返信
           <% end %>
           <br/>
           <%= f.text_area :message, class: 'form-control', row: 3 %>
@@ -16,7 +18,7 @@
             <p class="alert"><%= alert %></p>
           </div>
           <div class="post">
-            <% if @input_message.persisted? %>
+            <% if @input_message.persisted? || @reply_timeline %>
                 <%= link_to root_path do %>
                     <%= button_tag 'Cancel', class: 'btn btn-default' %>
                 <% end %>
@@ -24,6 +26,8 @@
             <%= f.submit 'Post', class: 'btn btn-primary' %>
           </div>
         </div>
+
+        <%= f.hidden_field :reply_id, value: @reply_timeline.id if @reply_timeline %>
     <% end %>
   </div>
 
@@ -42,21 +46,7 @@
   <!-- タイムライン -->
   <div class="timeline">
     <% @timeline.each do |t| %>
-        <div class="per <%= 'mine' if mypost?(t) %>">
-          <p class="icon">
-            <% if t.user.thumbnail? %>
-                <%= image_tag t.user.thumbnail.url %>
-            <% else %>
-                NO IMAGE
-            <% end %>
-          </p>
-          <%= simple_format t.message, class: 'message' %>
-          <% if mypost?(t) %>
-              <%= link_to root_path(id: t.id, message: t.message) do %>
-                  <%= button_tag 'Edit', class: 'btn btn-info' %>
-              <% end %>
-          <% end %>
-        </div>
+        <%= render 'timelines/timeline', t: t %>
     <% end %>
   </div>
 
